<resources>
    <string name="app_name" translatable="false">ATLAS INDONESIA</string>
    <string name="nama_daerah">Nama Daerah</string>
    <string name="detail">Detail</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="tentangapp">Aplikasi ATLAS INDONESIA merupakan aplikasi sederhana yang dikembangkan oleh ARIF PURNOMO AJI (Codename: Reefii) yang didalamnya berisi konten mengenai peta wilayah Indonesia. Jika terdapat saran/masukan untuk pengembangan aplikasi lebih lanjut, Anda dapat menghubungi developer melalui Email: Arifpurnomoaji998@gmail.com, atau dengan menekan tombol kontak developer dibawah ini:</string>
    <string name="pengaturan">Pengaturan Bahasa</string>
    <string name="pustaka">Sumber Pustaka</string>
    <string name="share">Bagikan</string>
    <string name="unduh_buku_atlas_indonesia">Unduh Buku Atlas Indonesia</string>
    <string name="sumber_1">Aplikasi ini dibuat berdasarkan data dari Ebook Resmi:</string>
    <string name="sumber_2" translatable="false">ATLAS Indonesia dan Dunia untuk SMA dan Sederajat</string>
    <string name="sumber_3">dari Badan Informasi Geospasial (BIG) Indonesia, yang dapat diakses melalui tombol dibawah</string>
    <string name="Urutan" translatable="false">0</string>
    <string name="detail_derah">Informasi Detail</string>
    <string name="uraian_detail_daerah">Uraian Detail Daerah</string>
    <string name="daerah_ini">Halo, saya menemukan detail mengenai daerah</string>
    <string name="peta_area">PETA WILAYAH</string>
    <string name="cubitklik">(cubit atau klik untuk memperbesar peta)</string>
    <string name="pengaturanmain">Pengaturan</string>
    <string name="diaplikasi">pada aplikasi Atlas Indonesia!</string>
    <string name="pengaturantema">Pengaturan Tema</string>
    <string-array name="nameea">
        <item>NKRI</item>
        <item>PULAU SUMATRA</item>
        <item>ACEH</item>
        <item>SUMATRA UTARA</item>
        <item>SUMATRA SELATAN</item>
        <item>SUMATRA BARAT</item>
        <item>BENGKULU</item>
        <item>RIAU</item>
        <item>KEP. RIAU</item>
        <item>JAMBI</item>
        <item>LAMPUNG</item>
        <item>BANGKA BELITUNG</item>
        <item>PULAU KALIMANTAN</item>
        <item>KALIMANTAN BARAT</item>
        <item>KALIMANTAN TIMUR</item>
        <item>KALIMANTAN SELATAN</item>
        <item>KALIMANTAN TENGAH</item>
        <item>KALIMANTAN UTARA</item>
        <item>PULAU JAWA</item>
        <item>BANTEN</item>
        <item>DKI. JAKARTA</item>
        <item>JAWA BARAT</item>
        <item>JAWA TENGAH</item>
        <item>DI. YOGYAKARTA</item>
        <item>JAWA TIMUR</item>
        <item>PULAU BALI dan NT</item>
        <item>BALI</item>
        <item>NUSA TENGGARA TIMUR</item>
        <item>NUSA TENGGARA BARAT</item>
        <item>PULAU SULAWESI</item>
        <item>GORONTALO</item>
        <item>SULAWESI BARAT</item>
        <item>SULAWESI SELATAN</item>
        <item>SULAWESI UTARA</item>
        <item>SULAWESI TENGAH</item>
        <item>SULAWESI TENGGARA</item>
        <item>PULAI MALUKU</item>
        <item>MALUKU UTARA</item>
        <item>MALUKU</item>
        <item>PULAU PAPUA</item>
        <item>PAPUA BARAT</item>
        <item>PAPUA</item>

    </string-array>
    <string-array name="urutannya">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>

    </string-array>
</resources>