<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pengaturanmain"
        android:textSize="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_20sdp"
        />

    <Button
        android:id="@+id/buttonChangeLang"
        android:onClick="changlanges"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/pengaturan"
        android:textSize="@dimen/_10ssp"
        android:background="@drawable/tombol_bgreen"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/buttonChangeTheme"
        android:onClick="changetheme"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/pengaturantema"
        android:textSize="@dimen/_10ssp"
        android:background="@drawable/tombol_bgreen"
        tools:ignore="UsingOnClickInXml" />

</LinearLayout>