<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/cover_atlasin">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/sumber_1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="#E64A19"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/sumber_2"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:textAlignment="center"
            android:text="@string/sumber_3"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp">

            <Button
                android:onClick="unduhatlasindo"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="wrap_content"
                android:text="@string/unduh_buku_atlas_indonesia"
                android:background="@drawable/tombol_bgreen"
                android:drawableRight="@drawable/ic_baseline_arrow_circle_down_24"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

