<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Tampilan_Detail"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/nama_daerah"
            android:textAlignment="center"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_100sdp">

            <!-- membuat tampilan peta-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/img_logo_daerah"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:scaleType="fitXY"
                    tools:src="@tools:sample/backgrounds/scenic" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <TextView
            android:text="@string/detail_derah"
            android:textStyle="bold"
            android:textSize="@dimen/_11ssp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_15sdp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_1sdp"
                android:layout_marginRight="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/uraian_detail_daerah"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_set_identity"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_set_name_peta"
            android:text="@string/peta_area"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/cubitklik"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/_9ssp"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            tools:ignore="RtlCompat" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_15sdp">

            <com.ortiz.touchview.TouchImageView
                android:id="@+id/img_pulau_daerah"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:scaleType="fitCenter"
                tools:src="@tools:sample/backgrounds/scenic" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>