<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_2sdp"
    android:layout_marginRight="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_2sdp"
    card_view:cardCornerRadius="@dimen/_2sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp">
        <ImageView
            android:id="@+id/photoo"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_100sdp"
            android:scaleType="centerInside"
            tools:src="@tools:sample/avatars"/>
        <TextView
            android:id="@+id/namee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_toEndOf="@id/photoo"
            android:layout_toRightOf="@id/photoo"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            tools:text="@string/nama_daerah" />

        <TextView
            android:id="@+id/uruttan"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            tools:text="@string/Urutan" />

        <TextView
            android:id="@+id/detaill"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_button"
            android:layout_below="@id/namee"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_toEndOf="@id/photoo"
            android:layout_toRightOf="@id/photoo"
            android:ellipsize="end"
            android:maxLines="4"
            tools:text="@string/detail" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shareme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tombol_bgblue"
                android:drawableRight="@drawable/ic_baseline_share_24"
                android:onClick="shareme"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/share"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>